# crag

./: .gitignore  Dockerfile  README.md  api.py  auth.py  docker-compose.yml  generate_markdown.py  graph.py  ingest.py  main.py  nodes.py  pyproject.toml  requirements.txt  state.py
frontend/: custom.d.ts  middleware.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/components/: ChatPanel.tsx  ChunksPanel.tsx  DocumentFilter.tsx  DocumentUpload.tsx  InfoPanel.tsx  PipelineGraph.tsx  PipelineTrace.tsx  SessionList.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  sessions.ts  types.ts
