[project]
name = "crag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "huggingface-hub>=1.17.0",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.2",
    "llama-parse>=0.6.94",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "uvicorn[standard]>=0.49.0",
    "voyageai>=0.4.0",
]
