[project]
name = "crag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "fastembed>=0.3.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.17.0",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "langsmith>=0.8.8",
    "llama-parse>=0.6.94",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "uvicorn[standard]>=0.49.0",
    "voyageai>=0.4.0",
]
